--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,2 +1,33 @@
-<h1>Admin::Customers#index</h1>
-<p>Find me in app/views/admin/customers/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-10 mx-2">
+      <h4>会員一覧</h4>
+    </div>
+    <div class="col-md-10 mx-2">
+      <table class="table">
+        <tbody>
+          <thead>
+            <tr>
+              <th>会員ID</th>
+              <th>氏名</th>
+              <th>メールアドレス</th>
+              <th>ステータス</th>
+            </tr>
+          </thead>
+          <% @customers.each do |customer| %>
+          <div>
+            <tr>
+              <td><%= customer.id %></td>
+              <td>
+                <%= link_to customer.first_name ,admin_customer_path(customer.id) %>
+              </td>
+              <td><%= customer.mail %></td>
+              <td><%= customer.is_active %></td>
+            </tr>
+          </div>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
