--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,2 +1,56 @@
-<h1>Admin::Customers#show</h1>
-<p>Find me in app/views/admin/customers/show.html.erb</p>
+<div class="container">
+  <div class="row mt-1 mb-5">
+    <div class="col-lg-2"></div>
+    <div class="col-lg-4">
+    <h4><%= @customer.last_name %>さんの会員詳細</h4>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-4">
+    </div>
+    <div class="col-sm-12 col-md-12 col-lg-8">
+      <table>
+        <tr>
+        <th>会員ID</th>
+        <th><%= @customer.id %></th>
+        </tr>
+        <th>氏名</th>
+        <th><%= @customer.last_name %> <%= @customer.first_name %></th>
+        </tr>
+        <tr>
+        <th>フリガナ</th>
+        <th><%= @customer.last_name_kana %> <%= @customer.first_name_kana %></th>
+        </tr>
+        <tr>
+        <th>郵便番号</th>
+        <th><%= @customer.postal_code %></th>
+        </tr>
+        <tr>
+        <th>住所</th>
+        <th><%= @customer.address %></th>
+        </tr>
+        <tr>
+        <th>電話番号</th>
+        <th><%= @customer.telephone_number %></th>
+        </tr>
+        <tr>
+        <th>メールアドレス</th>
+        <th><%= @customer.email %></th>
+        </tr>
+        <tr>
+        <th>会員ステータス</th>
+        <th><%= @customer.is_active %></th>
+        </tr>
+      </table>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-4 col-lg-4"></div>
+    <div class="text-center col-sm-4 col-md-4 col-lg-4 mx-auto">
+      <%= link_to '編集する', edit_admin_customer(@customer.id), class: "btn btn-success" %>
+    </div>
+    <div class="col-md-4 col-lg-4">
+      <%= link_to '注文履歴一覧を見る', edit_admin_customer(@customer.id), class: "btn btn-primary" %>
+    </div>
+  </div>
+</div>
