--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,2 +1,22 @@
-<h1>Admin::Genres#edit</h1>
-<p>Find me in app/views/admin/genres/edit.html.erb</p>
+<div class="container">
+  <div class="row mt-3 mb-1">
+    <div class="col-lg-1"></div>
+    <div class="col-lg-6">
+    <h4>ジャンル編集</h4>
+    </div>
+  </div>
+  <div class="row mt-4 mb-4">
+    <div class="form-group col-lg-2">
+      <%= form_with model: @genre,:url => {:action => :update} do |f| %>
+      <label for="genre_title">ジャンル名</label>
+    </div>
+    <div class="col-lg-3">
+      <%=f.text_field :name %>
+    </div>
+    <div class="col-lg-2">
+      <%=f.submit '変更を保存',class:"btn btn-success" %>
+      <% end %>
+    </div>
+  </div>
+  <div class="col-lg-6">
+  </div>
