--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -7,7 +7,7 @@
   </div>
   <div class="row mt-4 mb-4">
     <div class="form-group col-lg-2">
-      <%= form_with model: @genre do |f| %>
+      <%= form_with model: @genre,:url => {:action => :create} do |f| %>
       <label for="genre_title">ジャンル名</label>
     </div>
     <div class="col-lg-3">
