--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,2 +1,35 @@
-<h1>Admin::Items#index</h1>
-<p>Find me in app/views/admin/items/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-10 mx-2">
+      <h4>商品一覧</h4>
+    </div>
+    <div class="col-md-10 mx-2">
+      <table class="table">
+        <tbody>
+          <thead>
+            <tr>
+              <th>商品ID</th>
+              <th>商品名</th>
+              <th>税抜価格</th>
+              <th>ジャンル</th>
+              <th>ステータス</th>
+            </tr>
+          </thead>
+          <% @items.each do |item| %>
+          <div>
+            <tr>
+              <td><%= item.id %></td>
+              <td>
+                <%= link_to item.name ,admin_item_path(item.id) %>
+              </td>
+              <td><%= item.price %></td>
+              <td><%= item.genre.name %></td>
+              <td><%= item.is_active %></td>
+            </tr>
+          </div>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
