--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,2 +1,41 @@
-<h1>Admin::Items#new</h1>
-<p>Find me in app/views/admin/items/new.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-1"></div>
+    <h4>商品新規登録</h4>
+    </div>
+    <div class="col-sm-12 col-md-8 col-lg-5 px-sm-0 mx-auto">
+      <div class="form-group col-lg-12">
+        <%= form_with model: @item,:url => {:action => :create} do |f| %>
+        <label for="item_image">商品画像</label>
+        <%= f.file_field :image, placeholder: "ファイルを選択", accept: "image/*" %>
+      </div>
+      <div class="col-lg-12">
+        <label for="item_name">商品名</label>
+        <%= f.text_field :name, placeholder: "商品名" %>
+      </div>
+      <div class="col-lg-12">
+        <label for="item_introduction">商品説明</label>
+        <%= f.text_area :introduction, placeholder: "ここに説明文を記述します" %>
+      </div>
+      <div class="col-lg-12">
+        <label for="genre">ジャンル</label>
+        <%= f.collection_select :genre_id, Genre.all, :id, :name, include_blank: "選択して下さい" %>
+      </div>
+      <div class="col-lg-12">
+        <label for="price">税抜価格</label>
+        <%= f.text_field :price, placeholder: "1000" %>円
+      </div>
+      <div class="col-lg-12">
+        <label for="status">販売ステータス</label>
+        <%= f.radio_button :is_active, '1' %>
+        <%= f.label :is_active, '販売中', value: 1 %>
+        <%= f.radio_button :is_active, '0' %>
+        <%= f.label :is_active, '販売停止中', value: 0 %>
+      </div>
+      <div class="col-lg-12">
+        <%=f.submit '新規登録',class:"btn btn-lg btn-success" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
