Item_Show_View_220522

--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,2 +1,60 @@
-<h1>Admin::Customers#edit</h1>
-<p>Find me in app/views/admin/customers/edit.html.erb</p>
+<div class="container">
+  <div class="row mt-1 mb-5">
+    <div class="col-lg-2"></div>
+    <div class="col-lg-4">
+    <h4><%= @customer.last_name %>さんの会員情報編集</h4>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-4">
+    </div>
+    <div class="col-sm-12 col-md-12 col-lg-8">
+      <%= form_with model: @customer :url => {:action => :update} do |f| %>
+      <table>
+        <tr>
+        <th>会員ID</th>
+        <th><%= f.text_field :id %></th>
+        </tr>
+        <th>氏名</th>
+        <th><%= f.text_field :last_name %> <%=f.text_field :first_name %></th>
+        </tr>
+        <tr>
+        <th>フリガナ</th>
+        <th><%=f.text_field :last_name_kana %> <%=f.text_field :first_name_kana %></th>
+        </tr>
+        <tr>
+        <th>郵便番号</th>
+        <th><%=f.text_field :postal_code %></th>
+        </tr>
+        <tr>
+        <th>住所</th>
+        <th><%=f.text_field :address %></th>
+        </tr>
+        <tr>
+        <th>電話番号</th>
+        <th><%=f.text_field :telephone_number %></th>
+        </tr>
+        <tr>
+        <th>メールアドレス</th>
+        <th><%=f.text_field :email %></th>
+        </tr>
+        <tr>
+        <th>会員ステータス</th>
+        <th>
+          <%= f.radio_button :is_active, '1' %>
+          <%= f.label :is_active, '有効', value: 1 %>
+          <%= f.radio_button :is_active, '0' %>
+          <%= f.label :is_active, '退会', value: 0 %>
+        </th>
+        </tr>
+      </table>
+      <% end %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-4 col-lg-4"></div>
+    <div class="text-center col-sm-4 col-md-4 col-lg-4 mx-auto">
+      <%= link_to '変更を保存', admin_customer_path(@customer.id), class: "btn btn-lg btn-success" %>
+    </div>
+  </div>
+</div>
