--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,2 +1,84 @@
-<h1>Admin::Orders#show</h1>
-<p>Find me in app/views/admin/orders/show.html.erb</p>
+<div class="container">
+  <div class="row mt-1 mb-5">
+    <div class="col-lg-2"></div>
+    <div class="col-lg-4">
+    <h4>注文履歴一覧</h4>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12 col-md-12 col-lg-8">
+      <table>
+        <tr>
+        <th>購入者</th>
+        <th><%= @order.name %></th>
+        </tr>
+        <th>注文日</th>
+        <th><%= @order.created_at %></th>
+        </tr>
+        <tr>
+        <th>配送先</th>
+        <th><%= @order.postal_code %><%= @order.address %><%= @order.name %></th>
+        </tr>
+        <th>支払方法</th>
+        <th><%= @order.payment_method %></th>
+        </tr>
+        <tr>
+        <th>注文ステータス</th>
+        <th><%= @order.order_status %></th>
+        <th><%= link_to '更新', "/admin/orders/:id (@item.id)", class: "btn btn-lg btn-success" %></th>
+        </tr>
+      </table>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-9 col-lg-8">
+      <table class="table table-hover table-inverse">
+        <thead>
+          <tr>
+            <th>商品名</th>
+            <th>単価（税込）</th>
+            <th>数量</th>
+            <th>小計</th>
+            <th>製作ステータス</th>
+            <th></th>
+          </tr>
+        </thead>
+        <% @order.each do |order| %>
+          <tr>
+            <td>
+              <%= order.item_id.name %>
+            </td>
+            <td>
+              <%= order.price %>
+            </td>
+            <td>
+              <%= order.amount %>
+            </td>
+            <td>
+              <%= {(order.price)*(order.amount)} %>
+            </td>
+            <td>
+              <%= link_to '更新', "/admin/orders/:id (@item.id)", class: "btn btn-lg btn-success" %>
+            </td>
+          </tr>
+        <% end %>
+        </div>
+      </table>
+    <div class="col-md-3 col-lg-4">
+      <table>
+        <tr>
+          <th>商品合計</th>
+          <th></th>
+        </tr>
+        <tr>
+          <th>送料</th>
+          <th><%= order.postage %></th>
+        </tr>
+        <tr>
+          <th>請求金額合計</th>
+          <th></th>
+        </tr>
+      </table>
+    </div>
+  </div>
+</div>
