--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -1,2 +1,67 @@
-<h1>Public::Addresses#index</h1>
-<p>Find me in app/views/public/addresses/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-1"></div>
+    <div class="col-11 mx-4">
+    <h4>配送先登録/一覧</h4>
+    </div>
+  </div>
+  <%= form_with model: @address do |f| %>
+  <div class="field row my-2">
+    <div class="col-3">
+      郵便番号（ハイフンなし）
+    </div>
+    <div class="col-3">
+      <%= f.text_field :postal_code, class: "form-control" %>
+    </div>
+    <div class="col-6"></div>
+  </div>
+  <div class="field row my-2">
+    <div class="col-3">
+      住所
+    </div>
+    <div class="col-6">
+      <%=f.text_field :address, class: "form-control" %>
+    </div>
+    <div class="col-3"></div>
+  </div>
+  <div class="field row my-2">
+    <div class="col-3">
+      宛名
+    </div>
+    <div class="col-3">
+      <%=f.text_field :name,class: "form-control" %>
+    </div>
+    <div class="col-3"></div>
+    <div class="col-3">
+      <%=f.submit '新規登録',class: "btn btn-success" %>
+    </div>
+  </div>
+  <% end %>
+  <div class="row my-4">
+    <div class="col-8">
+      <table>
+        <thead>
+          <tr>
+            <th>郵便番号</th>
+            <th>住所</th>
+            <th>宛名</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @addresses.each do |address| %>
+          <tr>
+            <td><%= address.telephone_number %></td>
+            <td><%= address.address %><td>
+            <td><%= address.name %><td>
+            <td>
+              <%= link_to "編集する", edit_address_path(@address.id), class: "btn btn-lg btn-success" %>
+              <%= link_to "削除する", edit_address_path(@address.id), class: "btn btn-lg btn-danger" %>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="col-4"></div>
+  </div>
+</div>
