--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -47,10 +47,10 @@
   <div class="row">
     <div class="col-md-4 col-lg-4"></div>
     <div class="text-center col-sm-4 col-md-4 col-lg-4 mx-auto">
-      <%= link_to '編集する', edit_admin_customer(@customer.id), class: "btn btn-success" %>
+      <%= link_to '編集する', edit_admin_customer_path(@customer.id), class: "btn btn-success" %>
     </div>
     <div class="col-md-4 col-lg-4">
-      <%= link_to '注文履歴一覧を見る', edit_admin_customer(@customer.id), class: "btn btn-primary" %>
+      <%= link_to '注文履歴一覧を見る', edit_admin_customer_path(@customer.id), class: "btn btn-primary" %>
     </div>
   </div>
 </div>
