--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,2 +1,31 @@
-<h1>Admin::Homes#top</h1>
-<p>Find me in app/views/admin/homes/top.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-10 mx-2">
+      <h4>注文履歴一覧</h4>
+    </div>
+    <div class="col-md-10 mx-2">
+      <table class="table">
+        <tbody>
+          <thead>
+            <tr>
+              <th>購入日時</th>
+              <th>購入者</th>
+              <th>注文個数</th>
+              <th>注文ステータス</th>
+            </tr>
+          </thead>
+          <% @orders.each do |orders| %>
+          <div>
+            <tr>
+              <td><%= link_to orders.id ,admin_order_path %></td>
+              <td><%= orders.customers.last_name %></td>
+              <td><%= orders.orders_detail.amount %></td>
+              <td><%= orders.order_status %></td>
+            </tr>
+          </div>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
