--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
 
             <% else %>
               <li>
-                <%= link_to "About", home_about_path, class: "nav-link text-dark" %>
+                <%= link_to "About", about_path, class: "nav-link text-dark" %>
               </li>
               <li>
                 <%= link_to "商品一覧", items_path, class: "nav-link text-dark" %>
