--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -1,2 +1,40 @@
-<h1>Public::Addresses#edit</h1>
-<p>Find me in app/views/public/addresses/edit.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-1"></div>
+    <div class="col-11 mx-4">
+    <h4>配送先編集</h4>
+    </div>
+  </div>
+  <%= form_with model: @address do |f| %>
+  <div class="field row my-2">
+    <div class="col-3">
+      郵便番号（ハイフンなし）
+    </div>
+    <div class="col-3">
+      <%= f.text_field :postal_code, class: "form-control" %>
+    </div>
+    <div class="col-6"></div>
+  </div>
+  <div class="field row my-2">
+    <div class="col-3">
+      住所
+    </div>
+    <div class="col-6">
+      <%=f.text_field :address, class: "form-control" %>
+    </div>
+    <div class="col-3"></div>
+  </div>
+  <div class="field row my-2">
+    <div class="col-3">
+      宛名
+    </div>
+    <div class="col-3">
+      <%=f.text_field :name, class: "form-control" %>
+    </div>
+    <div class="col-3"></div>
+    <div class="col-3">
+      <%=f.submit '変更内容を保存',class: "btn btn-success" %>
+    </div>
+  </div>
+  <% end %>
+</div>
